--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,14 @@
     "homepage": "https://github.com/amin3536/laravel-api-user-provider",
     "keywords": ["Laravel", "LaravelApiUserProvider"],
     "require": {
-        "illuminate/support": "~7|~8"
+        "illuminate/support": "~7|~8",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~5|~6"
+        "orchestra/testbench": "~5|~6",
+
     },
     "autoload": {
         "psr-4": {
