--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "~5|~6"
-
+        "orchestra/testbench": "~5|~6",
+        "friendsofphp/php-cs-fixer": "^3.9",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
